--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name :"
+            android:text="名字 :"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
