--- a/res/layout/nursery_center_layout.xml
+++ b/res/layout/nursery_center_layout.xml
@@ -53,15 +53,15 @@
             android:id="@+id/numberPicker1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3" />
+            android:layout_weight="0.4" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0.1"
-            android:text=":"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_weight="0.2"
+            android:text="  :"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="50sp" />
 
@@ -69,13 +69,7 @@
             android:id="@+id/numberPicker2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3" />
-
-        <NumberPicker
-            android:id="@+id/numberPicker3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3" />
+            android:layout_weight="0.4" />
 
     </LinearLayout>
 
